--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1> Video Streaming Demonstration </h1>
-    <!-- <img src="https://jonniee.herokuapp.com/video_feed" /> -->
+    <img src="{{ url_for('video_feed') }}">
 </body>
 </html>
